# llm_sheet_analyzer

./: .gitignore  Dockerfile  docker-compose.yml  nixpacks.toml  pyproject.toml  testing.py
app/: config.py  main.py
app/bots/: telegram.py  whatsapp.py
app/models/: models.py
app/routes/: bot.py  query.py
app/services/: llm_client.py  query_engine.py  query_orchestrator.py  query_parser.py  query_rewriter.py  response_formatter.py  sheets_service.py
app/tests/: test_llm_client.py  test_query_engine.py
app/utils/: cache.py  df_utils.py  logger.py  validators.py
