[project]
name = "llm-sheet-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.94.1",
    "cachetools>=7.0.5",
    "fastapi[standard]>=0.135.3",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-genai>=1.73.0",
    "gspread>=6.2.1",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-telegram-bot>=22.7",
    "structlog>=25.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]